--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.thymeleaf.cache=false
+
+adminPath=http://localhost:8081/adminportal
+
 #management.security.enabled=false
 
 # ======================================
@@ -39,7 +42,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=binamoria@gmail.com
-spring.mail.password=Pctdev12$
+spring.mail.password=Pctdev12#
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
