--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ adminPath=http://localhost:8081/adminportal
 # ======================================
 
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstoredatabase
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_477a14b0f9392f3?reconnect=true
 
 #Username and secret
-spring.datasource.username=bina
-spring.datasource.password=root
+spring.datasource.username=b09739edc69139
+spring.datasource.password=8f2f0ccc
 
 #keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
